Tolerate actuator endpoints with the same id
Closes gh-39249